trying to fix style issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: sticky;
+  position: fixed;
   align-items: center;
 }
 
@@ -11,7 +11,7 @@ html {
   padding: 0;
   overflow-y: auto;
   overscroll-behavior-y: auto;
-  position: relative;
+  position: fixed;
 }
 
 .App {
